# api-service/docs/swagger.yaml
@@ -988,26 +988,6 @@ definitions:
       updated_at:
         type: string
     type: object
-  response.AuditLogListResponse:
-    properties:
-      items:
-        description: 审计日志列表
-        items:
-          $ref: '#/definitions/response.AuditLogResponse'
-        type: array
-      page:
-        description: 当前页码
-        type: integer
-      page_size:
-        description: 每页数量
-        type: integer
-      total:
-        description: 总记录数
-        type: integer
-      total_pages:
-        description: 总页数
-        type: integer
-    type: object
   response.AuditLogResponse:
     properties:
       action:
@@ -2353,7 +2333,14 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/response.AuditLogListResponse'
+            allOf:
+            - $ref: '#/definitions/common.PaginationResponse'
+            - properties:
+                items:
+                  items:
+                    $ref: '#/definitions/response.AuditLogResponse'
+                  type: array
+              type: object
         "400":
           description: Bad Request
           schema:
